# rssbotlib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  github_action_workflow_ubuntu.sh  github_action_workflow_windows.sh
.github/workflows/: main.yml
src/: build.sh  build_ffmpeg.sh  configure.sh
src/main/: build.h  ffmpegtype.cpp  ffmpegtype.h  getBasicInfo.cpp  getBasicInfo.h  getInfo.cpp  getInfo.h  getdur.cpp  getdur.h  listtopointer.h  version.cpp
